# prep-alpaca-trades-for-xero

./: .gitignore  LICENSE  README.md  create_csv_using_apis.py  prep_monthly_transaction_xero_csv.py  pyproject.toml  setup.py
docs/: XeroStatementImportTemplate.xlsx
src/: __init__.py  data_processing_tools.py  utils.py
test/: eval_code.py
test/data/: sample_trading_info.json  sample_trading_info_2.json
test/temp_output_files/: 2023-01 Statement.xlsx
